; ModuleID = '/home/carl/AnghaBench/lede/target/linux/generic/image/lzma-loader/src/extr_decompress.c_blast_icache.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/generic/image/lzma-loader/src/extr_decompress.c_blast_icache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KSEG0 = common dso_local global i64 0, align 8
@Index_Invalidate_I = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @blast_icache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blast_icache(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* @KSEG0, align 8
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %3, align 8
  %10 = add i64 %8, %9
  store i64 %10, i64* %6, align 8
  br label %11

11:                                               ; preds = %15, %2
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %11
  %16 = load i64, i64* %5, align 8
  %17 = load i32, i32* @Index_Invalidate_I, align 4
  %18 = call i32 @cache_unroll(i64 %16, i32 %17)
  %19 = load i64, i64* %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = add i64 %20, %19
  store i64 %21, i64* %5, align 8
  br label %11

22:                                               ; preds = %11
  ret void
}

declare dso_local i32 @cache_unroll(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
